# python-mini-project

./: .editorconfig  .gitignore  .replit  Armstrong-Number.py  CONTRIBUTING.md  Collatz-Conjecture.py  FLAMES_Game.py  Fibonacci-Series.py  Flipping-toss.py  Hangman_Game.py  LICENSE  Number_Guessing_Game.py  Pascal-Triangle.py  Prime-Number-Analyzer.py  README.html  README.md  Rock-Paper-Scissor.py  Roling_Dice.py  SECURITY.md  Simple-Calculator.py  TESTING_GUIDELINES.md  Text-to-Morse.py  Tower-of-Hanoi.py  Turtle-Mandala-Design.py  Turtle-Rainbow-Mandala.py  Turtle-Rainbow-Spiral.py  Turtle-Star-Design.py  WEB_APP_GUIDE.md  error_logger.py  issues.md  main.py  projects_registry.json  pyproject.toml  requirements.txt  search_projects.py  test_import.py
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
expression_parser/: README.md  __init__.py  evaluator.py  main.py  parser.py  tokenizer.py
games/: README.md
gssoc2/: index.html  script.js  style.css
math/: READ.md  README.md
security/: tar_safe.py  url_sanitizer.py
tests/: test_armstrong.py  test_binary_search.py  test_examples_validation.py  test_expression_parser.py  test_fibonacci.py  test_flames.py  test_happy_number.py  test_heap_sort.py  test_main_tui.py  test_math_quiz.py  test_matrix_calculator.py  test_morse.py  test_multithreaded_scraper.py  test_number_system_converter.py  test_pascal_triangle.py  test_password_manager.py  test_polar_transform.py  test_progressions.py  test_registry_validator.py  test_security.py  test_spy_number_game.py  test_validation.py
(+261 files in other folders)
